# rust-ota-api

./: Cargo.toml  build.rs
proto/: ota_metadata.proto
src/: main.rs
