[package]
name = "rust-ota-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
protobuf = "3.2.0"
lazy_static = "1.4.0"
serde = {version = "1.0.152", features = ["serde_derive"]}
serde_json = "1.0.93"
spin = "0.9.5"
tokio = {version = "1.25.0", features = ["rt", "rt-multi-thread", "macros"]}

[build-dependencies]
protobuf-codegen = "3.2.0"
